--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
 
             <!-- navbar header -->
             <div class="navbar-header">
-                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                </button>
-                <a href="#" class="navbar-brand">Learning Samples</a>
+                <h2>Learning Sample Projects</h2>
                 <div class="divider"></div>
             </div>
             <div class="divider">
