corrected the tribute link

--- a/tribute.html
+++ b/tribute.html
@@ -44,7 +44,7 @@
       </li>
       <li><b>Death:</b> On 7th June 2014, the whole world mourned the death of a great woman after batteling with uterine cancer</li>
     </ul>
-  <p>To know read more about Dora, kindly click on the link <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Dora_Akunyili">Wikipedia Entry</a></p>
+  <p>To read more, click on the link <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Dora_Akunyili">Wikipedia Entry</a></p>
 </main>
 
 </html>
